util/fipstools/delocate/delocate.peg.go
package main

// Code generated by /Users/shanggu/workplace/github/peg/peg delocate.peg DO NOT EDIT.

import (
	"fmt"
	"io"
	"os"
	"sort"
	"strconv"
	"strings"
)

const endSymbol rune = 1114112

/* The rule types inferred from the grammar are below. */
type pegRule uint8

const (
	ruleUnknown pegRule = iota
	ruleAsmFile
	ruleStatement
	ruleGlobalDirective
	ruleDirective
	ruleDirectiveName
	ruleLocationDirective
	ruleFileDirective
	ruleLocDirective
	ruleArgs
	ruleArg
	ruleQuotedArg
	ruleQuotedText
	ruleLabelContainingDirective
	ruleLabelContainingDirectiveName
	ruleSymbolArgs
	ruleSymbolArg
	ruleSymbolType
	ruleDot
	ruleTCMarker
	ruleEscapedChar
	ruleWS
	ruleComment
	ruleLabel
	ruleSymbolName
	ruleLocalSymbol
	ruleLocalLabel
	ruleLocalLabelRef
	ruleInstruction
	ruleInstructionName
	ruleInstructionArg
	ruleGOTLocation
	ruleGOTSymbolOffset
	ruleAVX512Token
	ruleTOCRefHigh
	ruleTOCRefLow
	ruleIndirectionIndicator
	ruleRegisterOrConstant
	ruleARMConstantTweak
	ruleARMRegister
	ruleARMVectorRegister
	ruleMemoryRef
	ruleSymbolRef
	ruleLow12BitsSymbolRef
	ruleARMBaseIndexScale
	ruleARMBaseIndexScale898
	ruleOffset331
	ruleOffset666
	ruleARMGOTLow12
	ruleARMPostincrement
	ruleBaseIndexScale
	ruleOperator
	ruleOffset
	ruleSection
	ruleSegmentRegister
)

var rul3s = [...]string{
	"Unknown",
	"AsmFile",
	"Statement",
	"GlobalDirective",
	"Directive",
	"DirectiveName",
	"LocationDirective",
	"FileDirective",
	"LocDirective",
	"Args",
	"Arg",
	"QuotedArg",
	"QuotedText",
	"LabelContainingDirective",
	"LabelContainingDirectiveName",
	"SymbolArgs",
	"SymbolArg",
	"SymbolType",
	"Dot",
	"TCMarker",
	"EscapedChar",
	"WS",
	"Comment",
	"Label",
	"SymbolName",
	"LocalSymbol",
	"LocalLabel",
	"LocalLabelRef",
	"Instruction",
	"InstructionName",
	"InstructionArg",
	"GOTLocation",
	"GOTSymbolOffset",
	"AVX512Token",
	"TOCRefHigh",
	"TOCRefLow",
	"IndirectionIndicator",
	"RegisterOrConstant",
	"ARMConstantTweak",
	"ARMRegister",
	"ARMVectorRegister",
	"MemoryRef",
	"SymbolRef",
	"Low12BitsSymbolRef",
	"ARMBaseIndexScale",
	"ARMBaseIndexScale898",
	"Offset331",
	"Offset666",
	"ARMGOTLow12",
	"ARMPostincrement",
	"BaseIndexScale",
	"Operator",
	"Offset",
	"Section",
	"SegmentRegister",
}

type token32 struct {
	pegRule
	begin, end uint32
}

func (t *token32) String() string {
	return fmt.Sprintf("\x1B[34m%v\x1B[m %v %v", rul3s[t.pegRule], t.begin, t.end)
}

type node32 struct {
	token32
	up, next *node32
}

func (node *node32) print(w io.Writer, pretty bool, buffer string) {
	var print func(node *node32, depth int)
	print = func(node *node32, depth int) {
		for node != nil {
			for c := 0; c < depth; c++ {
				fmt.Fprintf(w, " ")
			}
			rule := rul3s[node.pegRule]
			quote := strconv.Quote(string(([]rune(buffer)[node.begin:node.end])))
			if !pretty {
				fmt.Fprintf(w, "%v %v\n", rule, quote)
			} else {
				fmt.Fprintf(w, "\x1B[36m%v\x1B[m %v\n", rule, quote)
			}
			if node.up != nil {
				print(node.up, depth+1)
			}
			node = node.next
		}
	}
	print(node, 0)
}

func (node *node32) Print(w io.Writer, buffer string) {
	node.print(w, false, buffer)
}

func (node *node32) PrettyPrint(w io.Writer, buffer string) {
	node.print(w, true, buffer)
}

type tokens32 struct {
	tree []token32
}

func (t *tokens32) Trim(length uint32) {
	t.tree = t.tree[:length]
}

func (t *tokens32) Print() {
	for _, token := range t.tree {
		fmt.Println(token.String())
	}
}

func (t *tokens32) AST() *node32 {
	type element struct {
		node *node32
		down *element
	}
	tokens := t.Tokens()
	var stack *element
	for _, token := range tokens {
		if token.begin == token.end {
			continue
		}
		node := &node32{token32: token}
		for stack != nil && stack.node.begin >= token.begin && stack.node.end <= token.end {
			stack.node.next = node.up
			node.up = stack.node
			stack = stack.down
		}
		stack = &element{node: node, down: stack}
	}
	if stack != nil {
		return stack.node
	}
	return nil
}

func (t *tokens32) PrintSyntaxTree(buffer string) {
	t.AST().Print(os.Stdout, buffer)
}

func (t *tokens32) WriteSyntaxTree(w io.Writer, buffer string) {
	t.AST().Print(w, buffer)
}

func (t *tokens32) PrettyPrintSyntaxTree(buffer string) {
	t.AST().PrettyPrint(os.Stdout, buffer)
}

func (t *tokens32) Add(rule pegRule, begin, end, index uint32) {
	tree, i := t.tree, int(index)
	if i >= len(tree) {
		t.tree = append(tree, token32{pegRule: rule, begin: begin, end: end})
		return
	}
	tree[i] = token32{pegRule: rule, begin: begin, end: end}
}

func (t *tokens32) Tokens() []token32 {
	return t.tree
}

type Asm struct {
	Buffer string
	buffer []rune
	rules  [55]func() bool
	parse  func(rule ...int) error
	reset  func()
	Pretty bool
	tokens32
}

func (p *Asm) Parse(rule ...int) error {
	return p.parse(rule...)
}

func (p *Asm) Reset() {
	p.reset()
}

type textPosition struct {
	line, symbol int
}

type textPositionMap map[int]textPosition

func translatePositions(buffer []rune, positions []int) textPositionMap {
	length, translations, j, line, symbol := len(positions), make(textPositionMap, len(positions)), 0, 1, 0
	sort.Ints(positions)

search:
	for i, c := range buffer {
		if c == '\n' {
			line, symbol = line+1, 0
		} else {
			symbol++
		}
		if i == positions[j] {
			translations[positions[j]] = textPosition{line, symbol}
			for j++; j < length; j++ {
				if i != positions[j] {
					continue search
				}
			}
			break search
		}
	}

	return translations
}

type parseError struct {
	p   *Asm
	max token32
}

func (e *parseError) Error() string {
	tokens, err := []token32{e.max}, "\n"
	positions, p := make([]int, 2*len(tokens)), 0
	for _, token := range tokens {
		positions[p], p = int(token.begin), p+1
		positions[p], p = int(token.end), p+1
	}
	translations := translatePositions(e.p.buffer, positions)
	format := "parse error near %v (line %v symbol %v - line %v symbol %v):\n%v\n"
	if e.p.Pretty {
		format = "parse error near \x1B[34m%v\x1B[m (line %v symbol %v - line %v symbol %v):\n%v\n"
	}
	for _, token := range tokens {
		begin, end := int(token.begin), int(token.end)
		err += fmt.Sprintf(format,
			rul3s[token.pegRule],
			translations[begin].line, translations[begin].symbol,
			translations[end].line, translations[end].symbol,
			strconv.Quote(string(e.p.buffer[begin:end])))
	}

	return err
}

func (p *Asm) PrintSyntaxTree() {
	if p.Pretty {
		p.tokens32.PrettyPrintSyntaxTree(p.Buffer)
	} else {
		p.tokens32.PrintSyntaxTree(p.Buffer)
	}
}

func (p *Asm) WriteSyntaxTree(w io.Writer) {
	p.tokens32.WriteSyntaxTree(w, p.Buffer)
}

func (p *Asm) SprintSyntaxTree() string {
	var bldr strings.Builder
	p.WriteSyntaxTree(&bldr)
	return bldr.String()
}

func Pretty(pretty bool) func(*Asm) error {
	return func(p *Asm) error {
		p.Pretty = pretty
		return nil
	}
}

func Size(size int) func(*Asm) error {
	return func(p *Asm) error {
		p.tokens32 = tokens32{tree: make([]token32, 0, size)}
		return nil
	}
}
func (p *Asm) Init(options ...func(*Asm) error) error {
	var (
		max                  token32
		position, tokenIndex uint32
		buffer               []rune
	)
	for _, option := range options {
		err := option(p)
		if err != nil {
			return err
		}
	}
	p.reset = func() {
		max = token32{}
		position, tokenIndex = 0, 0

		p.buffer = []rune(p.Buffer)
		if len(p.buffer) == 0 || p.buffer[len(p.buffer)-1] != endSymbol {
			p.buffer = append(p.buffer, endSymbol)
		}
		buffer = p.buffer
	}
	p.reset()

	_rules := p.rules
	tree := p.tokens32
	p.parse = func(rule ...int) error {
		r := 1
		if len(rule) > 0 {
			r = rule[0]
		}
		matches := p.rules[r]()
		p.tokens32 = tree
		if matches {
			p.Trim(tokenIndex)
			return nil
		}
		return &parseError{p, max}
	}

	add := func(rule pegRule, begin uint32) {
		tree.Add(rule, begin, position, tokenIndex)
		tokenIndex++
		if begin != position && position > max.end {
			max = token32{rule, begin, position}
		}
	}

	matchDot := func() bool {
		if buffer[position] != endSymbol {
			position++
			return true
		}
		return false
	}

	/*matchChar := func(c byte) bool {
		if buffer[position] == c {
			position++
			return true
		}
		return false
	}*/

	/*matchRange := func(lower byte, upper byte) bool {
		if c := buffer[position]; c >= lower && c <= upper {
			position++
			return true
		}
		return false
	}*/

	_rules = [...]func() bool{
		nil,
		/* 0 AsmFile <- <(Statement* !.)> */
		func() bool {
			position0, tokenIndex0 := position, tokenIndex
			{
				position1 := position
			l2:
				{
					position3, tokenIndex3 := position, tokenIndex
					if !_rules[ruleStatement]() {
						goto l3
					}
					goto l2
				l3:
					position, tokenIndex = position3, tokenIndex3
				}
				{
					position4, tokenIndex4 := position, tokenIndex
					if !matchDot() {
						goto l4
					}
					goto l0
				l4:
					position, tokenIndex = position4, tokenIndex4
				}
				add(ruleAsmFile, position1)
			}
			return true
		l0:
			position, tokenIndex = position0, tokenIndex0
			return false
		},
		/* 1 Statement <- <(WS? (Label / (('a' / 'A') ('d' / 'D') ('d' / 'D') ' ' ('s' / 'S') ('p' / 'P') ',' ('s' / 'S') ('p' / 'P') ',' '#' '3' '2' '*' '(' '1' '2' '-' '4' ')' '\n') / ((GlobalDirective / LocationDirective / LabelContainingDirective / Instruction / Directive / Comment / ) WS? ((Comment? '\n') / ';'))))> */
		func() bool {
			position5, tokenIndex5 := position, tokenIndex
			{
				position6 := position
				{
					position7, tokenIndex7 := position, tokenIndex
					if !_rules[ruleWS]() {
						goto l7
					}
					goto l8
				l7:
					position, tokenIndex = position7, tokenIndex7
				}
			l8:
				{
					position9, tokenIndex9 := position, tokenIndex
					if !_rules[ruleLabel]() {
						goto l10
					}
					goto l9
				l10:
					position, tokenIndex = position9, tokenIndex9
					{
						position12, tokenIndex12 := position, tokenIndex
						if buffer[position] != rune('a') {
							goto l13
						}
						position++
						goto l12
					l13:
						position, tokenIndex = position12, tokenIndex12
						if buffer[position] != rune('A') {
							goto l11
						}
						position++
					}
				l12:
					{
						position14, tokenIndex14 := position, tokenIndex
						if buffer[position] != rune('d') {
							goto l15
						}
						position++
						goto l14
					l15:
						position, tokenIndex = position14, tokenIndex14
						if buffer[position] != rune('D') {
							goto l11
						}
						position++
					}
				l14:
					{
						position16, tokenIndex16 := position, tokenIndex
						if buffer[position] != rune('d') {
							goto l17
						}
						position++
						goto l16
					l17:
						position, tokenIndex = position16, tokenIndex16
						if buffer[position] != rune('D') {
							goto l11
						}
						position++
					}
				l16:
					if buffer[position] != rune(' ') {
						goto l11
					}
					position++
					{
						position18, tokenIndex18 := position, tokenIndex
						if buffer[position] != rune('s') {
							goto l19
						}
						position++
						goto l18
					l19:
						position, tokenIndex = position18, tokenIndex18
						if buffer[position] != rune('S') {
							goto l11
						}
						position++
					}
				l18:
					{
						position20, tokenIndex20 := position, tokenIndex
						if buffer[position] != rune('p') {
							goto l21
						}
						position++
						goto l20
					l21:
						position, tokenIndex = position20, tokenIndex20
						if buffer[position] != rune('P') {
							goto l11
						}
						position++
					}
				l20:
					if buffer[position] != rune(',') {
						goto l11
					}
					position++
					{
						position22, tokenIndex22 := position, tokenIndex
						if buffer[position] != rune('s') {
							goto l23
						}
						position++
						goto l22
					l23:
						position, tokenIndex = position22, tokenIndex22
						if buffer[position] != rune('S') {
							goto l11
						}
						position++
					}
				l22:
					{
						position24, tokenIndex24 := position, tokenIndex
						if buffer[position] != rune('p') {
							goto l25
						}
						position++
						goto l24
					l25:
						position, tokenIndex = position24, tokenIndex24
						if buffer[position] != rune('P') {
							goto l11
						}
						position++
					}
				l24:
					if buffer[position] != rune(',') {
						goto l11
					}
					position++
					if buffer[position] != rune('#') {
						goto l11
					}
					position++
					if buffer[position] != rune('3') {
						goto l11
					}
					position++
					if buffer[position] != rune('2') {
						goto l11
					}
					position++
					if buffer[position] != rune('*') {
						goto l11
					}
					position++
					if buffer[position] != rune('(') {
						goto l11
					}
					position++
					if buffer[position] != rune('1') {
						goto l11
					}
					position++
					if buffer[position] != rune('2') {
						goto l11
					}
					position++
					if buffer[position] != rune('-') {
						goto l11
					}
					position++
					if buffer[position] != rune('4') {
						goto l11
					}
					position++
					if buffer[position] != rune(')') {
						goto l11
					}
					position++
					if buffer[position] != rune('\n') {
						goto l11
					}
					position++
					goto l9
				l11:
					position, tokenIndex = position9, tokenIndex9
					{
						position26, tokenIndex26 := position, tokenIndex
						if !_rules[ruleGlobalDirective]() {
							goto l27
						}
						goto l26
					l27:
						position, tokenIndex = position26, tokenIndex26
						if !_rules[ruleLocationDirective]() {
							goto l28
						}
						goto l26
					l28:
						position, tokenIndex = position26, tokenIndex26
						if !_rules[ruleLabelContainingDirective]() {
							goto l29
						}
						goto l26
					l29:
						position, tokenIndex = position26, tokenIndex26
						if !_rules[ruleInstruction]() {
							goto l30
						}
						goto l26
					l30:
						position, tokenIndex = position26, tokenIndex26
						if !_rules[ruleDirective]() {
							goto l31
						}
						goto l26
					l31:
						position, tokenIndex = position26, tokenIndex26
						if !_rules[ruleComment]() {
							goto l32
						}
						goto l26
					l32:
						position, tokenIndex = position26, tokenIndex26
					}
				l26:
					{
						position33, tokenIndex33 := position, tokenIndex
						if !_rules[ruleWS]() {
							goto l33
						}
						goto l34
					l33:
						position, tokenIndex = position33, tokenIndex33
					}
				l34:
					{
						position35, tokenIndex35 := position, tokenIndex
						{
							position37, tokenIndex37 := position, tokenIndex
							if !_rules[ruleComment]() {
								goto l37
							}
							goto l38
						l37:
							position, tokenIndex = position37, tokenIndex37
						}
					l38:
						if buffer[position] != rune('\n') {
							goto l36
						}
						position++
						goto l35
					l36:
						position, tokenIndex = position35, tokenIndex35
						if buffer[position] != rune(';') {
							goto l5
						}
						position++
					}
				l35:
				}
			l9:
				add(ruleStatement, position6)
			}
			return true
		l5:
			position, tokenIndex = position5, tokenIndex5
			return false
		},
		/* 2 GlobalDirective <- <((('.' ('g' / 'G') ('l' / 'L') ('o' / 'O') ('b' / 'B') ('a' / 'A') ('l' / 'L')) / ('.' ('g' / 'G') ('l' / 'L') ('o' / 'O') ('b' / 'B') ('l' / 'L'))) WS SymbolName)> */
		func() bool {
			position39, tokenIndex39 := position, tokenIndex
			{
				position40 := position
				{
					position41, tokenIndex41 := position, tokenIndex
					if buffer[position] != rune('.') {
						goto l42
					}
					position++
					{
						position43, tokenIndex43 := position, tokenIndex
						if buffer[position] != rune('g') {
							goto l44
						}
						position++
						goto l43
					l44:
						position, tokenIndex = position43, tokenIndex43
						if buffer[position] != rune('G') {
							goto l42
						}
						position++
					}
				l43:
					{
						position45, tokenIndex45 := position, tokenIndex
						if buffer[position] != rune('l') {
							goto l46
						}
						position++
						goto l45
					l46:
						position, tokenIndex = position45, tokenIndex45
						if buffer[position] != rune('L') {
							goto l42
						}
						position++
					}
				l45:
					{
						position47, tokenIndex47 := position, tokenIndex
						if buffer[position] != rune('o') {
							goto l48
						}
						position++
						goto l47
					l48:
						position, tokenIndex = position47, tokenIndex47
						if buffer[position] != rune('O') {
							goto l42
						}
						position++
					}
				l47:
					{
						position49, tokenIndex49 := position, tokenIndex
						if buffer[position] != rune('b') {
							goto l50
						}
						position++
						goto l49
					l50:
						position, tokenIndex = position49, tokenIndex49
						if buffer[position] != rune('B') {
							goto l42
						}
						position++
					}
				l49:
					{
						position51, tokenIndex51 := position, tokenIndex
						if buffer[position] != rune('a') {
							goto l52
						}
						position++
						goto l51
					l52:
						position, tokenIndex = position51, tokenIndex51
						if buffer[position] != rune('A') {
							goto l42
						}
						position++
					}
				l51:
					{
						position53, tokenIndex53 := position, tokenIndex
						if buffer[position] != rune('l') {
							goto l54
						}
						position++
						goto l53
					l54:
						position, tokenIndex = position53, tokenIndex53
						if buffer[position] != rune('L') {
							goto l42
						}
						position++
					}
				l53:
					goto l41
				l42:
					position, tokenIndex = position41, tokenIndex41
					if buffer[position] != rune('.') {
						goto l39
					}
					position++
					{
						position55, tokenIndex55 := position, tokenIndex
						if buffer[position] != rune('g') {
							goto l56
						}
						position++
						goto l55
					l56:
						position, tokenIndex = position55, tokenIndex55
						if buffer[position] != rune('G') {
							goto l39
						}
						position++
					}
				l55:
					{
						position57, tokenIndex57 := position, tokenIndex
						if buffer[position] != rune('l') {
							goto l58
						}
						position++
						goto l57
					l58:
						position, tokenIndex = position57, tokenIndex57
						if buffer[position] != rune('L') {
							goto l39
						}
						position++
					}
				l57:
					{
						position59, tokenIndex59 := position, tokenIndex
						if buffer[position] != rune('o') {
							goto l60
						}
						position++
						goto l59
					l60:
						position, tokenIndex = position59, tokenIndex59
						if buffer[position] != rune('O') {
							goto l39
						}
						position++
					}
				l59:
					{
						position61, tokenIndex61 := position, tokenIndex
						if buffer[position] != rune('b') {
							goto l62
						}
						position++
						goto l61
					l62:
						position, tokenIndex = position61, tokenIndex61
						if buffer[position] != rune('B') {
							goto l39
						}
						position++
					}
				l61:
					{
						position63, tokenIndex63 := position, tokenIndex
						if buffer[position] != rune('l') {
							goto l64
						}
						position++
						goto l63
					l64:
						position, tokenIndex = position63, tokenIndex63
						if buffer[position] != rune('L') {
							goto l39
						}
						position++
					}
				l63:
				}
			l41:
				if !_rules[ruleWS]() {
					goto l39
				}
				if !_rules[ruleSymbolName]() {
					goto l39
				}
				add(ruleGlobalDirective, position40)
			}
			return true
		l39:
			position, tokenIndex = position39, tokenIndex39
			return false
		},
		/* 3 Directive <- <('.' DirectiveName (WS Args)?)> */
		func() bool {
			position65, tokenIndex65 := position, tokenIndex
			{
				position66 := position
				if buffer[position] != rune('.') {
					goto l65
				}
				position++
				if !_rules[ruleDirectiveName]() {
					goto l65
				}
				{
					position67, tokenIndex67 := position, tokenIndex
					if !_rules[ruleWS]() {
						goto l67
					}
					if !_rules[ruleArgs]() {
						goto l67
					}
					goto l68
				l67:
					position, tokenIndex = position67, tokenIndex67
				}
			l68:
				add(ruleDirective, position66)
			}
			return true
		l65:
			position, tokenIndex = position65, tokenIndex65
			return false
		},
		/* 4 DirectiveName <- <([a-z] / [A-Z] / ([0-9] / [0-9]) / '_')+> */
		func() bool {
			position69, tokenIndex69 := position, tokenIndex
			{
				position70 := position
				{
					position73, tokenIndex73 := position, tokenIndex
					if c := buffer[position]; c < rune('a') || c > rune('z') {
						goto l74
					}
					position++
					goto l73
				l74:
					position, tokenIndex = position73, tokenIndex73
					if c := buffer[position]; c < rune('A') || c > rune('Z') {
						goto l75
					}
					position++
					goto l73
				l75:
					position, tokenIndex = position73, tokenIndex73
					{
						position77, tokenIndex77 := position, tokenIndex
						if c := buffer[position]; c < rune('0') || c > rune('9') {
							goto l78
						}
						position++
						goto l77
					l78:
						position, tokenIndex = position77, tokenIndex77
						if c := buffer[position]; c < rune('0') || c > rune('9') {
							goto l76
						}
						position++
					}
				l77:
					goto l73
				l76:
					position, tokenIndex = position73, tokenIndex73
					if buffer[position] != rune('_') {
						goto l69
					}
					position++
				}
			l73:
			l71:
				{
					position72, tokenIndex72 := position, tokenIndex
					{
						position79, tokenIndex79 := position, tokenIndex
						if c := buffer[position]; c < rune('a') || c > rune('z') {
							goto l80
						}
						position++
						goto l79
					l80:
						position, tokenIndex = position79, tokenIndex79
						if c := buffer[position]; c < rune('A') || c > rune('Z') {
							goto l81
						}
						position++
						goto l79
					l81:
						position, tokenIndex = position79, tokenIndex79
						{
							position83, tokenIndex83 := position, tokenIndex
							if c := buffer[position]; c < rune('0') || c > rune('9') {
								goto l84
							}
							position++
							goto l83
						l84:
							position, tokenIndex = position83, tokenIndex83
							if c := buffer[position]; c < rune('0') || c > rune('9') {
								goto l82
							}
							position++
						}
					l83:
						goto l79
					l82:
						position, tokenIndex = position79, tokenIndex79
						if buffer[position] != rune('_') {
							goto l72
						}
						position++
					}
				l79:
					goto l71
				l72:
					position, tokenIndex = position72, tokenIndex72
				}
				add(ruleDirectiveName, position70)
			}
			return true
		l69:
			position, tokenIndex = position69, tokenIndex69
			return false
		},
		/* 5 LocationDirective <- <(FileDirective / LocDirective)> */
		func() bool {
			position85, tokenIndex85 := position, tokenIndex
			{
				position86 := position
				{
					position87, tokenIndex87 := position, tokenIndex
					if !_rules[ruleFileDirective]() {
						goto l88
					}
					goto l87
				l88:
					position, tokenIndex = position87, tokenIndex87
					if !_rules[ruleLocDirective]() {
						goto l85
					}
				}
			l87:
				add(ruleLocationDirective, position86)
			}
			return true
		l85:
			position, tokenIndex = position85, tokenIndex85
			return false
		},
		/* 6 FileDirective <- <('.' ('f' / 'F') ('i' / 'I') ('l' / 'L') ('e' / 'E') WS (!('#' / '\n') .)+)> */
		func() bool {
			position89, tokenIndex89 := position, tokenIndex
			{
				position90 := position
				if buffer[position] != rune('.') {
					goto l89
				}
				position++
				{
					position91, tokenIndex91 := position, tokenIndex
					if buffer[position] != rune('f') {
						goto l92
					}
					position++
					goto l91
				l92:
					position, tokenIndex = position91, tokenIndex91
					if buffer[position] != rune('F') {
						goto l89
					}
					position++
				}
			l91:
				{
					position93, tokenIndex93 := position, tokenIndex
					if buffer[position] != rune('i') {
						goto l94
					}
					position++
					goto l93
				l94:
					position, tokenIndex = position93, tokenIndex93
					if buffer[position] != rune('I') {
						goto l89
					}
					position++
				}
			l93:
				{
					position95, tokenIndex95 := position, tokenIndex
					if buffer[position] != rune('l') {
						goto l96
					}
					position++
					goto l95
				l96:
					position, tokenIndex = position95, tokenIndex95
					if buffer[position] != rune('L') {
						goto l89
					}
					position++
				}
			l95:
				{
					position97, tokenIndex97 := position, tokenIndex
					if buffer[position] != rune('e') {
						goto l98
					}
					position++
					goto l97
				l98:
					position, tokenIndex = position97, tokenIndex97
					if buffer[position] != rune('E') {
						goto l89
					}
					position++
				}
			l97:
				if !_rules[ruleWS]() {
					goto l89
				}
				{
					position101, tokenIndex101 := position, tokenIndex
					{
						position102, tokenIndex102 := position, tokenIndex
						if buffer[position] != rune('#') {
							goto l103
						}
						position++
						goto l102
					l103:
						position, tokenIndex = position102, tokenIndex102
						if buffer[position] != rune('\n') {
							goto l101
						}
						position++
					}
				l102:
					goto l89
				l101:
					position, tokenIndex = position101, tokenIndex101
				}
				if !matchDot() {
					goto l89
				}
			l99:
				{
					position100, tokenIndex100 := position, tokenIndex
					{
						position104, tokenIndex104 := position, tokenIndex
						{
							position105, tokenIndex105 := position, tokenIndex
							if buffer[position] != rune('#') {
								goto l106
							}
							position++
							goto l105
						l106:
							position, tokenIndex = position105, tokenIndex105
							if buffer[position] != rune('\n') {
								goto l104
							}
							position++
						}
					l105:
						goto l100
					l104:
						position, tokenIndex = position104, tokenIndex104
					}
					if !matchDot() {
						goto l100
					}
					goto l99
				l100:
					position, tokenIndex = position100, tokenIndex100
				}
				add(ruleFileDirective, position90)
			}
			return true
		l89:
			position, tokenIndex = position89, tokenIndex89
			return false
		},
		/* 7 LocDirective <- <('.' ('l' / 'L') ('o' / 'O') ('c' / 'C') WS (!('#' / '/' / '\n') .)+)> */
		func() bool {
			position107, tokenIndex107 := position, tokenIndex
			{
				position108 := position
				if buffer[position] != rune('.') {
					goto l107
				}
				position++
				{
					position109, tokenIndex109 := position, tokenIndex
					if buffer[position] != rune('l') {
						goto l110
					}
					position++
					goto l109
				l110:
					position, tokenIndex = position109, tokenIndex109
					if buffer[position] != rune('L') {
						goto l107
					}
					position++
				}
			l109:
				{
					position111, tokenIndex111 := position, tokenIndex
					if buffer[position] != rune('o') {
						goto l112
					}
					position++
					goto l111
				l112:
					position, tokenIndex = position111, tokenIndex111
					if buffer[position] != rune('O') {
						goto l107
					}
